force-app/main/default/objects/Bus__c/fields/Last_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Date__c</fullName>
    <description>Last Service  Date</description>
    <inlineHelpText>The last time the bus was active.</inlineHelpText>
    <label>Last Service Date</label>
    <type>Date</type>
</CustomField>