force-app/main/default/objects/Bus__c/fields/Total_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Capacity__c</fullName>
    <defaultValue>40</defaultValue>
    <description>Seating Capacity</description>
    <inlineHelpText>Seating Capacity per bus.</inlineHelpText>
    <label>Total Capacity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>