force-app/main/default/objects/Bus__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Bus Type</description>
    <inlineHelpText>Bus Model - prices may vary due to type.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Coach</fullName>
            </value>
            <value>
                <fullName>Luxury Shuttle</fullName>
            </value>
            <value>
                <fullName>Double Decker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>