force-app/main/default/objects/Bus__c/fields/Vehicle_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_ID_Number__c</fullName>
    <description>VIN #</description>
    <inlineHelpText>VIN #</inlineHelpText>
    <label>Vehicle ID Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>